results/SVCOMP/conversational/log-ExSymExe18-2024_03_11_21_21_32.txt
class Main {
    static int field;
    static int field2;

    //@ ensures \result ==> field == 9 && (\exists Main inst; inst != null; inst.test(3, field, field2));
    //@ ensures !\result ==> field != 9 || (\forall Main inst; inst != null; !inst.test(3, field, field2));
    public static boolean f() {
        int x = 3;
        Main inst = new Main();
        field = 9;
        return inst.test(x, field, field2);
    }
    
    //@ ensures \result ==> z*x >= x*r && (z > x ==>  (\exists int y; y == 3; z > x) && (z <= x ==> z <= x));
    //@ ensures !\result ==> z*x < x*r || (z > x ==>  (\forall int y; y != 3; z <= x) || (z <= x ==> z > x));
    public boolean test(int x, int z, int r) {
        System.out.println("Testing ExSymExe18");
        int y = 3;
        x = x * r;
        z = z * x;
        r = y * x;
        if (z > x) {
            System.out.println("branch FOO1");
            return false;
        } else System.out.println("branch FOO2");
        if (x > r) System.out.println("branch BOO1");
        else System.out.println("branch BOO2");
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe18.java:5: error: An identifier with package visibility may not be used in a ensures clause with public visibility
    //@ ensures \result ==> field == 9 && (\exists Main inst; inst != null; inst.test(3, field, field2));
                            ^
/home/max/Documents/JMLGPT/tmp/ExSymExe18.java:5: error: An identifier with package visibility may not be used in a ensures clause with public visibility
    //@ ensures \result ==> field == 9 && (\exists Main inst; inst != null; inst.test(3, field, field2));
                                                                                         ^
/home/max/Documents/JMLGPT/tmp/ExSymExe18.java:5: error: An identifier with package visibility may not be used in a ensures clause with public visibility
    //@ ensures \result ==> field == 9 && (\exists Main inst; inst != null; inst.test(3, field, field2));
                                                                                                ^
/home/max/Documents/JMLGPT/tmp/ExSymExe18.java:6: error: An identifier with package visibility may not be used in a ensures clause with public visibility
    //@ ensures !\result ==> field != 9 || (\forall Main inst; inst != null; !inst.test(3, field, field2));
                             ^
/home/max/Documents/JMLGPT/tmp/ExSymExe18.java:6: error: An identifier with package visibility may not be used in a ensures clause with public visibility
    //@ ensures !\result ==> field != 9 || (\forall Main inst; inst != null; !inst.test(3, field, field2));
                                                                                           ^
/home/max/Documents/JMLGPT/tmp/ExSymExe18.java:6: error: An identifier with package visibility may not be used in a ensures clause with public visibility
    //@ ensures !\result ==> field != 9 || (\forall Main inst; inst != null; !inst.test(3, field, field2));
                                                                                                  ^
6 errors

class Main {
    spec_public static int field;
    spec_public static int field2;

    //@ ensures \result ==> field == 9 && (\exists Main inst; inst != null; inst.test(3, field, field2));
    //@ ensures !\result ==> field != 9 || (\forall Main inst; inst != null; !inst.test(3, field, field2));
    public static boolean f() {
        int x = 3;
        Main inst = new Main();
        field = 9;
        return inst.test(x, field, field2);
    }
    
    //@ ensures \result ==> z*x >= x*r && (z > x ==>  (\exists int y; y == 3; z > x) && (z <= x ==> z <= x));
    //@ ensures !\result ==> z*x < x*r || (z > x ==>  (\forall int y; y != 3; z <= x) || (z <= x ==> z > x));
    public boolean test(int x, int z, int r) {
        System.out.println("Testing ExSymExe18");
        int y = 3;
        x = x * r;
        z = z * x;
        r = y * x;
        if (z > x) {
            System.out.println("branch FOO1");
            return false;
        } else System.out.println("branch FOO2");
        if (x > r) System.out.println("branch BOO1");
        else System.out.println("branch BOO2");
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe18.java:2: error: <identifier> expected
    spec_public static int field;
               ^
/home/max/Documents/JMLGPT/tmp/ExSymExe18.java:3: error: <identifier> expected
    spec_public static int field2;
               ^
2 errors

class Main {
    //@ spec_public
    static int field;
    //@ spec_public
    static int field2;

    //@ ensures \result ==> field == 9 && (\exists Main inst; inst != null; inst.test(3, field, field2));
    //@ ensures !\result ==> field != 9 || (\forall Main inst; inst != null; !inst.test(3, field, field2));
    public static boolean f() {
        int x = 3;
        Main inst = new Main();
        field = 9;
        return inst.test(x, field, field2);
    }
    
    //@ ensures \result ==> z*x >= x*r && (z > x ==>  (\exists int y; y == 3; z > x) && (z <= x ==> z <= x));
    //@ ensures !\result ==> z*x < x*r || (z > x ==>  (\forall int y; y != 3; z <= x) || (z <= x ==> z > x));
    public boolean test(int x, int z, int r) {
        System.out.println("Testing ExSymExe18");
        int y = 3;
        x = x * r;
        z = z * x;
        r = y * x;
        if (z > x) {
            System.out.println("branch FOO1");
            return false;
        } else System.out.println("branch FOO2");
        if (x > r) System.out.println("branch BOO1");
        else System.out.println("branch BOO2");
        return true;
    }
}
